# PieMenuTesting

./: .gitignore  .gitmodules  BerechnungsModell.cpp  BerechnungsModell.h  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  EnableIntrinsics.cmake  Helpers.h  PieMenuZustände.scxml  Placements.cpp  Placements.h  README.md  SelfRegFactory.h  StateEngine.scxml  Superpolator.cpp  Superpolator.h  _mainwindow.ui  cpp.hint  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qpiemenu.cpp  qpiemenu.h
QPieMenu/: CMakeLists.txt  EnableIntrinsics.cmake  qpiemenu.cpp  qpiemenu.h
StateEngine/: States.cpp  States.h
diagrams/: States.scxml
